--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -252,25 +252,25 @@ watchers:
       - amd64-5\.10\.[01]?[0-9]-.*
   - name: "ZoneMTA Redis"
     type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ zonemta_redis.container.image }}
-    tag: {{ zonemta_redis.container.tag }}
+    repo: {{ zonemta_redis.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ zonemta_redis.base_image.name }}
+    tag: {{ zonemta_redis.base_image.tag }}
     includes:
       - "[5-9]\\.[0-9]+\\.[0-9]+.*alpine3\\.9"
   - name: "ZoneMTA Mongo"
     type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ zonemta_mongo.container.image }}
-    tag: {{ zonemta_mongo.container.tag }}
+    repo: {{ zonemta_mongo.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ zonemta_mongo.base_image.name }}
+    tag: {{ zonemta_mongo.base_image.tag }}
     includes:
       - 4\.[0-9]+.[0-9]+-bionic
     excludes:
       - 4\.0\..*
   - name: "ZoneMTA Node"
     type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ zonemta.container.from_image }}
-    tag: {{ zonemta.container.from_tag }}
+    repo: {{ zonemta.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ zonemta.base_image.name }}
+    tag: {{ zonemta.base_image.tag }}
     includes:
       - 10\.[0-9]+\.[0-9]+-alpine
     excludes:
