--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: mailhog
-        image: "{{ mailhog.container.image }}:{{ mailhog.container.tag }}"
+        image: "{{ mailhog.container.image }}"
         resources:
           requests:
             cpu: "{{ mailhog.container.requests_cpu }}"
