--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -213,9 +213,9 @@ watchers:
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+"
   - type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ mailhog.container.image }}
-    tag: {{ mailhog.container.tag }}
+    repo: {{ mailhog.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ mailhog.base_image.name }}
+    tag: {{ mailhog.base_image.tag }}
     excludes:
       - latest
   - type: docker_registry
