--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -195,9 +195,9 @@ watchers:
     excludes:
       - 0\.[0-7]\.
   - type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ gotify.container.image }}
-    tag: {{ gotify.container.tag }}
+    repo: {{ gotify.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ gotify.base_image.name }}
+    tag: {{ gotify.base_image.tag }}
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
     excludes:
