--- a/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/statefulSet.yaml.j2
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: openldap
-        image: "{{ openldap.container.image }}:{{ openldap.container.tag }}"
+        image: "{{ openldap.container.image }}"
         args: ["--copy-service"]
         volumeMounts:
         - name: tz-config
