--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -313,9 +313,9 @@ watchers:
       - ^0\.
       - 1\.0\..*
   - type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ fluentd.container.from_image }}
-    tag: {{ fluentd.container.from_tag }}
+    repo: {{ fluentd.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ fluentd.base_image.name }}
+    tag: {{ fluentd.base_image.tag }}
     includes:
       - v[1-9]\.[0-9]+\.[0-9]+.*debian.*
     excludes:
