--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: fluent-bit
-        image: "{{ fluentbit.container.image }}:{{ fluentbit.container.tag }}"
+        image: "{{ fluentbit.container.image }}"
         imagePullPolicy: Always
         ports:
           - containerPort: 2020
