--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -303,9 +303,9 @@ watchers:
       - ^1\.0\..*
       - .*rc.*
   - type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ fluentbit.container.image }}
-    tag: {{ fluentbit.container.tag }}
+    repo: {{ fluentbit.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ fluentbit.base_image.name }}
+    tag: {{ fluentbit.base_image.tag }}
     includes:
       - "[1-9]\\.[0-9]+\\.[0-9].*"
     excludes:
