--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: kibana
-        image: "{{ kibana.container.image }}:{{ kibana.container.tag }}"
+        image: "{{ kibana.container.image }}"
         resources:
           requests:
             cpu: "{{ kibana.container.requests_cpu }}"
