Rework nginx_exporter

--- a/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: nginx-exporter
-        image: "{{ nginx_exporter.container.image }}:{{ nginx_exporter.container.tag }}"
+        image: "{{ nginx_exporter.container.image }}"
         args:
         - -nginx.scrape-uri
         - http://$(NODE_IP):81/status
