--- a/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: nginx-log-exporter
-        image: "{{ nginx_log_exporter.container.repo }}/{{ nginx_log_exporter.container.image }}:{{ nginx_log_exporter.container.tag }}"
+        image: "{{ nginx_log_exporter.container.image }}"
         args:
         - -config-file
         - /etc/prometheus-nginxlog-exporter.yaml
