Rework apcups-exporter

--- a/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
@@ -20,7 +20,7 @@ spec:
         app-component: apcups-exporter
     spec:
       containers:
-      - image: "{{ apcups_exporter.container.image }}:{{ apcups_exporter.container.tag }}"
+      - image: "{{ apcups_exporter.container.image }}"
         name: apcups-exporter
         env:
         - name: APCUPS_ADDR
