Rework prometheus_operator/prometheus/alertmanager

--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
@@ -8,8 +8,8 @@ metadata:
   name: main
   namespace: monitoring
 spec:
-  baseImage: "{{ alertmanager.container.repo }}/{{ alertmanager.container.image }}"
-  version: "{{ alertmanager.container.tag }}"
+  baseImage: "{{ alertmanager.base_image.repo }}/{{ alertmanager.base_image.name }}"
+  version: "{{ alertmanager.base_image.tag }}"
   nodeSelector:
     beta.kubernetes.io/os: linux
     capability/general-purpose: 'yes'
