--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-statefulSet.yaml.j2
@@ -20,7 +20,7 @@ spec:
         app-component: pgsql
     spec:
       containers:
-      - image: "{{ ttrss_pgsql.container.image }}:{{ ttrss_pgsql.container.tag }}"
+      - image: "{{ ttrss_pgsql.container.image }}"
         name: pgsql
         env:
         - name: POSTGRES_USER
