--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -465,4 +465,4 @@ watchers:
     image: {{ ttrss_pgsql.base_image.name }}
     tag: {{ ttrss_pgsql.base_image.tag }}
     includes:
-      - ^11\.[0-9]+(\.[0-9]+)?
+      - ^11\.[0-9]+(\.[0-9]+)?-alpine
