--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -443,9 +443,9 @@ watchers:
   # Apps : Web #
   ##############
   - type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ heimdall.container.from_image }}
-    tag: {{ heimdall.container.from_tag }}
+    repo: {{ heimdall.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ heimdall.base_image.name }}
+    tag: {{ heimdall.base_image.tag }}
     includes:
       - amd64-[0-9]+\.[0-9]+\.[0-9]+.*
     excludes:
