--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -165,9 +165,9 @@ watchers:
     includes:
       - .*-slim-v10
   - type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ roomassistant.container.image }}
-    tag: {{ roomassistant.container.tag }}
+    repo: {{ roomassistant.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ roomassistant.base_image.name }}
+    tag: {{ roomassistant.base_image.tag }}
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
     excludes:
