--- a/ansible/install_applications/roles/stream-plex.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-plex.deploy/app/deploy/statefulSet.yaml.j2
@@ -20,7 +20,7 @@ spec:
         app-component: plex
     spec:
       containers:
-      - image: "{{ plex.container.image }}:{{ plex.container.tag }}"
+      - image: "{{ plex.container.image }}"
         name: plex
         ports:
         - containerPort: 32400
