--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -430,9 +430,9 @@ watchers:
     excludes:
       - 10\.[0-3]\.
   - type: docker_registry
-    repo: registry-1.docker.io
-    image: {{ plex.container.image }}
-    tag: {{ plex.container.tag }}
+    repo: {{ plex.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ plex.base_image.name }}
+    tag: {{ plex.base_image.tag }}
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+\\..*"
     excludes:
