--- a/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/statefulset.yaml.j2
@@ -31,7 +31,7 @@ spec:
         - name: sickchill-config
           mountPath: /tmp/config
       containers:
-      - image: "{{ sickchill.container.image }}:{{ sickchill.container.tag }}"
+      - image: "{{ sickchill.container.image }}"
         name: sickchill
         ports:
         - containerPort: 8081
