--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: pyload
     spec:
       containers:
-      - image: "{{ pyload.container.image }}:{{ pyload.container.tag }}"
+      - image: "{{ pyload.container.image }}"
         name: pyload
         ports:
         - containerPort: 8000
