--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -54,9 +54,9 @@ watchers:
     repo: {{ openldap.base_image.repo | default('registry-1.docker.io') }}
     image: {{ openldap.base_image.name }}
     tag: {{ openldap.base_image.tag }}
+    includes:
+      - "[0-9]+\\.[0-9]+\\.[0-9]+-amd64"
     excludes:
-      - latest
-      - .*-dev
       - ^1\.1\.
   - type: docker_registry
     repo: {{ phpldapadmin.base_image.repo | default('registry-1.docker.io') }}
