--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -62,8 +62,9 @@ watchers:
     repo: {{ phpldapadmin.base_image.repo | default('registry-1.docker.io') }}
     image: {{ phpldapadmin.base_image.name }}
     tag: {{ phpldapadmin.base_image.tag }}
+    includes:
+      - "[0-9]+\\.[0-9]+\\.[0-9]+-amd64"
     excludes:
-      - latest
       - ^0\.[1-7]\.
   
   ##############
