--- a/ansible/install_applications/roles/infra-dashboard.deploy/app/deploy/clusterRoleBinding.yaml.j2
+++ b/ansible/install_applications/roles/infra-dashboard.deploy/app/deploy/clusterRoleBinding.yaml.j2
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: admin-user
+  name: dashboard-admin-user
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
 - kind: ServiceAccount
-  name: admin-user
-  namespace: kube-system
+  name: dashboard-admin-user
+  namespace: kubernetes-dashboard
