--- a/ansible/install_applications/roles/infra-dashboard.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-dashboard.deploy/app/deploy/ingress.yaml.j2
@@ -2,10 +2,11 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: dashboard
-  namespace: kube-system
+  namespace: kubernetes-dashboard
   labels:
     app: kubernetes-dashboard
   annotations:
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
     nginx.ingress.kubernetes.io/configuration-snippet: |
       rewrite ^(/kube)$ $1/ permanent;
@@ -21,4 +22,4 @@ spec:
       - path: /kube/?(.*)
         backend:
           serviceName: kubernetes-dashboard
-          servicePort: 80
+          servicePort: 443
