--- a/ansible/install_applications/roles/infra-dashboard.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/infra-dashboard.deploy/app/deploy/serviceAccount.yaml.j2
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: admin-user
-  namespace: kube-system
+  name: dashboard-admin-user
+  namespace: kubernetes-dashboard
