--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -178,6 +178,12 @@ watchers:
   ################
   # Apps : Infra #
   ################
+
+  - type: github_release
+    repo: kubernetes-incubator/metrics-server
+    release: {{ kubernetes_metrics_server.base_image.tag }}
+    excludes:
+      - .*beta.*
   - type: github_release
     repo: kubernetes/dashboard
     release: {{ kubernetes_dashboard.base_image.tag }}
