--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
@@ -60,42 +60,15 @@ spec:
         - --telemetry-port=8082
         image: "{{ kube_state_metrics.container.image }}"
         name: kube-state-metrics
-        # Kube-state-metrics uses an auto-scaler, so it doesn't have the usual requests and limits.
-        # Look at the pod_nanny command below to see those values
-        #resources:
-        #  limits:
-        #  requests:
-      - command:
-        - /pod_nanny
-        - --container=kube-state-metrics
-        - --cpu={{ kube_state_metrics.container.base_cpu }}
-        - --extra-cpu={{ kube_state_metrics.container.extra_cpu }}
-        - --memory={{ kube_state_metrics.container.base_memory }}
-        - --extra-memory={{ kube_state_metrics.container.extra_memory }}
-        - --threshold=5
-        - --deployment=kube-state-metrics
-        env:
-        - name: MY_POD_NAME
-          valueFrom:
-            fieldRef:
-              apiVersion: v1
-              fieldPath: metadata.name
-        - name: MY_POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              apiVersion: v1
-              fieldPath: metadata.namespace
-        image: k8s.gcr.io/addon-resizer:1.8.4
-        name: addon-resizer
         resources:
-          limits:
-            cpu: 50m
-            memory: 30Mi
           requests:
-            cpu: 10m
-            memory: 30Mi
+            cpu: "{{ kube_state_metrics.container.requests_cpu }}"
+            memory: "{{ kube_state_metrics.container.requests_memory }}"
+          limits:
+            cpu: "{{ kube_state_metrics.container.limits_cpu }}"
+            memory: "{{ kube_state_metrics.container.limits_memory }}"
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
         capability/general-purpose: 'yes'
       securityContext:
         runAsNonRoot: true
