Add comments and update TODO about kubelet serving cert and metrics server

--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
@@ -31,6 +31,8 @@ spec:
       - name: metrics-server
         image: "{{ kubernetes_metrics_server.container.image }}"
         imagePullPolicy: Always
+        # TODO : Fix kubelet serving certificate and remove this insecure flag
+        # See https://github.com/kubernetes/kubeadm/issues/1223
         args:
         - --kubelet-insecure-tls=true
         resources:
