--- a/ansible/install_infra/roles/kubernetes-master-bootstrap/templates/kubeadm_config.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes-master-bootstrap/templates/kubeadm_config.yaml.j2
@@ -22,3 +22,13 @@ localAPIEndpoint:
 {% if kubernetes_apiserver_ip is defined %}
   advertiseAddress: "{{ kubernetes_apiserver_ip }}"
 {% endif %}
+
+---
+
+apiVersion: kubelet.config.k8s.io/v1beta1
+kind: KubeletConfiguration
+# TODO : Fix kubelet serving certificate
+# Enabling serverTLSBootstrap allows Kubelet to have proper serving certificates
+# However, it requires to manually accept them (`kubectl get csr`, `kubectl certificate approve`
+# See https://github.com/kubernetes/kubeadm/issues/1223
+#serverTLSBootstrap: true
