Add namespace creation in the base application deploy role

--- a/ansible/install_applications/roles/_base.deploy/templates/namespace/glusterfs-service.yaml.j2
+++ b/ansible/install_applications/roles/_base.deploy/templates/namespace/glusterfs-service.yaml.j2
@@ -3,7 +3,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: {{ kubernetes_glusterfs_endpoint }}
-  namespace: {{ item.1 }}
+  namespace: {{ application_namespace }}
 spec:
   ports:
   - port: 1
