--- a/ansible/install_applications/roles/_base.deploy/templates/namespace/tls-secret.yaml.j2
+++ b/ansible/install_applications/roles/_base.deploy/templates/namespace/tls-secret.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ingress-tls
-  namespace: {{ item }}
+  namespace: {{ application_namespace }}
   labels:
     app: ingress-nginx
     app-component: ingress-nginx
