--- a/ansible/install_applications/roles/_base.deploy/templates/namespace/cluster-ca-secret.yaml.j2
+++ b/ansible/install_applications/roles/_base.deploy/templates/namespace/cluster-ca-secret.yaml.j2
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cluster-ca
-  namespace: {{ item }}
+  namespace: {{ application_namespace }}
 data:
   {{ cluster_ca_file.source | basename }}: {{ cluster_ca_file.content }}
