--- a/ansible/install_applications/roles/_base.deploy/templates/namespace/glusterfs-endpoint.yaml.j2
+++ b/ansible/install_applications/roles/_base.deploy/templates/namespace/glusterfs-endpoint.yaml.j2
@@ -3,7 +3,7 @@ kind: Endpoints
 apiVersion: v1
 metadata:
   name: {{ kubernetes_glusterfs_endpoint }}
-  namespace: {{ item.1 }}
+  namespace: {{ application_namespace }}
 subsets:
 {% for glusterfs_node in groups['glusterfs_servers'] | map('extract', hostvars, ['ansible_host']) %}
 - addresses:
